@@ -1,7 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.2.32
 
-
+  *) Core: reject NULLs in request line or request headers.
+     PR 43039 [Nick Kew]
 
 Changes with Apache 2.2.31
 
